Revert "Add files via upload"

--- a/Cover Template for Bootstrap.html
+++ b/Cover Template for Bootstrap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0037)http://bootstrapk.com/examples/cover/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
@@ -36,16 +36,9 @@
 
         <div class="cover-container">
 
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">영화 몇시에 볼까?</h3>
-              
-            </div>
-          </div>
-
           <div class="inner cover">
-            <h1 class="cover-heading">영화 시간표를 비교하세요.</h1>
-            <p class="lead">가까운 영화관의 영화 시간표를 한 눈에~</p>
+            <h1 class="cover-heading"><a href="http://localhost/index.php">영화 몇시에 볼까?</a></h1>
+            <p class="lead">가까운 거리에 있는 영화 시간표를 보여주는 웹페이지입니다..</p>
             <p class="lead">
               <a href="http://bootstrapk.com/examples/cover/#" class="btn btn-lg btn-default">Learn more</a>
             </p>
@@ -70,6 +63,6 @@
     <script src="./Cover Template for Bootstrap_files/bootstrap.min.js.다운로드"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./Cover Template for Bootstrap_files/ie10-viewport-bug-workaround.js.다운로드"></script>
-
+  
 
 </body></html>
