--- a/Cover Template for Bootstrap.html
+++ b/Cover Template for Bootstrap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0037)http://bootstrapk.com/examples/cover/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="http://bootstrapk.com/favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>영화 몇시에 볼까?</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./Cover Template for Bootstrap_files/bootstrap.min.css" rel="stylesheet">
@@ -31,6 +31,29 @@
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="./Theme Template for Bootstrap_files/ie-emulation-modes-warning.js.다운로드"></script>
 
+    <style>
+      .input-location{
+        margin:10px;
+      }
+      .input-transportation{
+        margin:10px;
+        margin-right:5px;
+      }
+      .input-min{
+        margin:10px;
+        margin-left:0;
+      }
+      .input-scope{
+        margin:10px;
+        margin-right:5px;
+      }
+      select{
+        display: inline;
+      }
+
+    </style>
+
+
   </head>
 
   <body>
@@ -46,29 +69,47 @@
             <p class="lead" style="padding-bottom: 50px;padding-top: 30px;">가까운 거리에 있는 영화 시간표를 보여주는 웹페이지입니다..<br /></p>
             <p class="lead">
               <form class="form-inline">
-                <div class="form-group">
-                  <label for="myaddress"><strong>내 위치</strong></label>
-                  <input type="text" class="form-control" id="exampleInputName2" placeholder="위치 입력" style="width :260px;">
+                <span class="input-location">
+                  <span><label><strong>내 위치</strong></label></span>
+                  <input type="text" class="form-control" name="myaddress"id="myaddress" placeholder="위치 입력">
+                </span>
+
+                <span class="input-scope">
+                <span class='input-transportation'>
+                <label> <strong>범위 설정 </strong></label>
+                <div class="btn-group btn-group-toggle" data-toggle="buttons" display=''>
+
+                  <label class="btn btn-primary active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked=""> 도보
+                  </label>
+                  <label class="btn btn-primary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> 대중교통
+                  </label>
+                  <label class="btn btn-primary">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 자동차
+                  </label>
                 </div>
-                <div class="form-group">
-                  <label for="findway" style="padding-left: 30px;"><strong>거리 지정</strong></label>
-                  <button type="button" class="btn btn-default">도보</button>
-                  <button type="button" class="btn btn-primary">대중교통</button>
-                  <button type="button" class="btn btn-default">자동차</button>
-                  <div class="dropdown theme-dropdown clearfix">
-                    <a id="dropdownMenu1" href="http://bootstrapk.com/examples/theme/#" class="sr-only dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                      <li class="active" role="presentation"><a role="menuitem" tabindex="-1" href="http://bootstrapk.com/examples/theme/#">Action</a></li>
-                      <li role="presentation"><a role="menuitem" tabindex="-1" href="http://bootstrapk.com/examples/theme/#">Another action</a></li>
-                      <li role="presentation"><a role="menuitem" tabindex="-1" href="http://bootstrapk.com/examples/theme/#">Something else here</a></li>
-                      <li role="presentation" class="divider"></li>
-                      <li role="presentation"><a role="menuitem" tabindex="-1" href="http://bootstrapk.com/examples/theme/#">Separated link</a></li>
-                    </ul>
-                  </div>
-                </div>
-           <button type="button" class="btn btn-primary" style="height : 50px; margin-top: 50px;">영화 몇시에 볼까!</button>
-              </form>
+              </span>
+
+                <span class="input-min">
+                  <select class="form-control" id="exampleSelect1" name='min'>
+                    <option value='10'>10</option>
+                    <option value='20'>20</option>
+                    <option value='30'>30</option>
+                    <option value='+'>30분 이상</option>
+                  </select>
+                  <label for="exampleSelect1">분 이내</label>
+                </span>
+            </span>
+            <p>
+              <input type="submit" class="btn btn-primary" style="height : 50px; margin-top: 50px;" value="영화 몇시에 볼까!">
             </p>
+              </form>
+
+
+                </div>
+
+
           </div>
 
           <div class="mastfoot">
@@ -90,6 +131,6 @@
     <script src="./Cover Template for Bootstrap_files/bootstrap.min.js.다운로드"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./Cover Template for Bootstrap_files/ie10-viewport-bug-workaround.js.다운로드"></script>
-  
+
 
 </body></html>
